--- a/todo.txt
+++ b/todo.txt
@@ -3,13 +3,14 @@ in game:
 add to move stack
 change toplay
 everyone must call game::play()
+clobber board conversion char x,o,. vs board as EMPTY, BLACK, WHITE
+move_generator clobber_1xn
 
 
 TODO
-move_generator* clobber_1xn
-
-clobber board conversion char x,o,. vs board as EMPTY, BLACK, WHITE
-write clobber board
+clobber unit tests
+    move generator, solve, convert from/to string
+test write clobber board
 
 use a proper unit test framework, maybe https://github.com/siu/minunit
 add nim formula
@@ -17,6 +18,15 @@ add random testing for nim, in general? size parameter for random games?
 game.generate_random(size)?
 
 nim move generator could go into cpp. Only needed by nim_test - it could just use the generic movegenerator interface?
+
+search stats
+
+simple file format for tests:
+    line 1: game name, file format version?
+    line 2..n:
+    one test per line
+    format: game toPlay win/loss result
+    get, convert existing small clobber and NoGo tests
 
 TALK
 cgt solver talk
